objects/Location_Hazard__c.object
<CustomObject>
    <description>records having hazardous locations</description>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hazard_Description__c</fullName>
        <label>Hazard Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Location Hazard</relationshipLabel>
        <relationshipName>Location_Hazard</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OpenDate__c</fullName>
        <label>Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Location Hazard</relationshipLabel>
        <relationshipName>Location_Hazard</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Location Hazard</label>
    <nameField>
        <displayFormat>LocH-{0000}</displayFormat>
        <label>Location hazard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Hazard</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>